HighContrast: Fix outdated name for headerbar box

--- a/gtk/theme/HighContrast/gtk-contained-inverse.css
+++ b/gtk/theme/HighContrast/gtk-contained-inverse.css
@@ -490,7 +490,7 @@ toolbar.inline-toolbar:backdrop, searchbar.inline-toolbar:backdrop { border-colo
 
 .titlebar .subtitle, headerbar .subtitle { font-size: 80%; padding: 0 12px; }
 
-.titlebar > GtkBox > separator.vertical, headerbar > GtkBox > separator.vertical { border-width: 0 1px; border-color: #fff; border-style: solid; }
+.titlebar > box > separator.vertical, headerbar > box > separator.vertical { border-width: 0 1px; border-color: #fff; border-style: solid; }
 
 .titlebar.selection-mode, headerbar.selection-mode { color: #b7b7b7; text-shadow: 0 1px rgba(0, 0, 0, 0.5); background-image: linear-gradient(to bottom, #eaeaea, #e2e2e2); box-shadow: inset 0 -1px #262626, inset 0 1px #6f6f6f; }
 
